# mmo

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.data  Dockerfile.init  Dockerfile.login_server  Dockerfile.realm_server  Dockerfile.world_server  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SERVER_USAGE.md  PS.hlsl  README.md  RENAME_SUMMARY.md  VS_0.hlsl  VS_1.hlsl  VS_2.hlsl  VS_3.hlsl  compose.yml  config.h.in  copilot-instructions.md  docker-compose.init.yml  docker-compose.yml  hyperlink_test_example.cpp  terrain_deform_fix.patch  test_hyperlink.cpp  test_mcp_server.ps1  version.h.in
src/: CMakeLists.txt
src/game_server_unit_tests/: CMakeLists.txt  anti_cheat_tracker_test.cpp  aura_effect_test.cpp  bag_manager_test.cpp  cc_ai_test.cpp  cc_counter_test.cpp  cc_movement_test.cpp  equipment_manager_test.cpp  inventory_types_test.cpp  item_factory_test.cpp  item_validator_test.cpp  loot_instance_test.cpp  slot_manager_test.cpp  spell_effects_test.cpp  spell_stacking_test.cpp  trade_test.cpp
src/graphics_test/: CMakeLists.txt  deferred_renderer.cpp  deferred_renderer.h  event_loop.h  main.cpp
src/hpak_tool/: CMakeLists.txt  describe.cpp  describe.h  extract.cpp  extract.h  main.cpp  pack.cpp  pack.h
src/launcher/: CMakeLists.txt  MainMenu.xib  launcher.aps  launcher.rc  main.cpp  resource.h
src/login_server/: CMakeLists.txt  configuration.cpp  configuration.h  database.cpp  database.h  login_http_handlers.cpp  login_http_handlers.h  main.cpp  mysql_database.cpp  mysql_database.h  player.cpp  player.h  player_manager.cpp  player_manager.h  program.cpp  program.h  realm.cpp  realm.h  realm_manager.cpp  realm_manager.h  web_client.cpp  web_client.h  web_service.cpp  web_service.h
src/login_server_tests/: CMakeLists.txt  main.cpp  mock_database.h  test_http_handlers.cpp  test_srp.cpp
src/mcp_content_server/: CMakeLists.txt  README.md  SPELL_TOOLS.md  class_tools.cpp  class_tools.h  configuration.cpp  configuration.h  item_tools.cpp  item_tools.h  main.cpp  mcp_server.cpp  mcp_server.h  spell_tools.cpp  spell_tools.h
src/mesh_tool/: CMakeLists.txt  main.cpp
src/mmo_bot/: CMakeLists.txt  README.md  bot_action.h  bot_actions.h  bot_cleric_capabilities.cpp  bot_cleric_capabilities.h  bot_cleric_controller.cpp  bot_cleric_controller.h  bot_companion_state_machine.cpp  bot_companion_state_machine.h  bot_companion_types.h  bot_console_prompt.cpp  bot_console_prompt.h  bot_context.cpp  bot_context.h  bot_follow_policy.cpp  bot_follow_policy.h  bot_follow_types.h  bot_login_connector.cpp  bot_login_connector.h  bot_mage_capabilities.cpp  bot_mage_capabilities.h  bot_mage_controller.cpp  bot_mage_controller.h  bot_main.cpp  bot_movement_controller.cpp  bot_movement_controller.h  bot_movement_math.cpp  bot_movement_math.h  bot_nav_service.cpp  bot_nav_service.h  bot_object_manager.cpp  bot_object_manager.h  bot_profile.h  bot_profiles.h  bot_realm_connector.cpp  bot_realm_connector.h  bot_startup_selection.cpp  bot_startup_selection.h  bot_startup_types.h  (+8 more)
src/mmo_client/: CMakeLists.txt  action_bar.cpp  action_bar.h  archive.h  area_trigger_manager.cpp  area_trigger_manager.h  audio.h  avatar.h  cache_provider.h  char_create_info.cpp  char_create_info.h  char_select.cpp  char_select.h  client.cpp  client.h  client_application.cpp  client_application.h  client_cache.cpp  client_cache.h  client_context.cpp  client_context.h  client_runtime.cpp  client_runtime.h  client_ui_runtime.cpp  client_ui_runtime.h  console.cpp  console.h  console_commands.cpp  console_commands.h  console_var.cpp  console_var.h  cursor.cpp  cursor.h  db_cache.h  debug_path_visualizer.cpp  debug_path_visualizer.h  debug_text_overlay.cpp  debug_text_overlay.h  discord.cpp  discord.h  (+97 more)
src/mmo_edit/: CMakeLists.txt  asset_preview_provider.cpp  asset_window.cpp  asset_window.h  configuration.cpp  configuration.h  database.cpp  database.h  detour_debug_drawer.cpp  detour_debug_drawer.h  editor_application.h  editor_base.h  editor_fonts.cpp  editor_fonts.h  editor_host.h  editor_window_base.cpp  editor_window_base.h  fbx_import.cpp  fbx_import.h  icon_font.h  imgui_listbox.cpp  imgui_listbox.h  log_window.cpp  log_window.h  main_window.cpp  main_window.h  minimap_grid_view.cpp  minimap_grid_view.h  mmo_edit.aps  mmo_edit.cpp  mmo_edit.rc  mysql_database.cpp  mysql_database.h  preview_provider_manager.cpp  resource.h  selectable.h  selected_entity.cpp  selected_entity.h  selected_map_entity.cpp  selected_map_entity.h  (+13 more)
src/mmo_error/: CMakeLists.txt  main.cpp  mmo_error.rc  resource.h
src/model_editor/: CMakeLists.txt  asset_window.cpp  fbx_import.cpp  fbx_import.h  log_window.cpp  main_window.cpp  main_window.h  mmo_edit.cpp  model_editor.cpp  viewport_window.cpp  viewport_window.h
src/movement_tests/: CMakeLists.txt  main.cpp  test_movement_advanced.cpp  test_movement_backward.cpp  test_movement_corner.cpp  test_movement_flat_floor.cpp  test_movement_stepup_jump.cpp  test_movement_wall.cpp
src/nav_builder/: CMakeLists.txt  main.cpp
src/realm_server/: CMakeLists.txt  chat_channel_mgr.cpp  chat_channel_mgr.h  configuration.cpp  configuration.h  database.cpp  database.h  friend_mgr.cpp  friend_mgr.h  guild_mgr.cpp  guild_mgr.h  login_connector.cpp  login_connector.h  main.cpp  motd_manager.cpp  motd_manager.h  mysql_database.cpp  mysql_database.h  player.cpp  player.h  player_group.cpp  player_group.h  player_manager.cpp  player_manager.h  program.cpp  program.h  web_client.cpp  web_client.h  web_service.cpp  web_service.h  world.cpp  world.h  world_manager.cpp  world_manager.h
src/realm_server_tests/: CMakeLists.txt  main.cpp  mock_databases.h  test_friend_mgr.cpp  test_motd_manager.cpp  test_player_group.cpp  test_stubs.cpp
src/shared/: CMakeLists.txt
src/texture_tool/: CMakeLists.txt  image_parser.h  main.cpp  tga_image_parser.h
src/unit_tests/: CMakeLists.txt  clock_test.cpp  main.cpp  test_aabb.cpp  test_allocation_map.cpp  test_assign_on_exit.cpp  test_auth_protocol.cpp  test_base64.cpp  test_big_number.cpp  test_binaryio.cpp  test_bot_context.cpp  (+45 more)
(+2067 files in other folders)
