
# Include base lib
add_subdirectory(base)
add_subdirectory(log)
add_subdirectory(simple_file_format)
add_subdirectory(binary_io)
add_subdirectory(network)
add_subdirectory(sql_wrapper)
add_subdirectory(mysql_wrapper)
add_subdirectory(auth_protocol)
add_subdirectory(game_protocol)
add_subdirectory(base64)
add_subdirectory(http)
add_subdirectory(http_client)
add_subdirectory(virtual_dir)
add_subdirectory(game)
